--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<div class='content'>
 					<div class='left'>
 						<div class='screenshot'>
-							<img src='screenshot/kayanatin.png'>
+							<img src='screenshot/KayaNatin.png'>
 						</div>
 					</div>
 					<div class='right'>
