--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 							pageIndex = 0;
 							$("#folio .panel-container").removeClass("left current next prev").addClass("right").removeAttr("style");
 							$("#folio #0").removeClass("right").addClass(" current");
+							currentPanel=0;
 							break;
 						case 1:
 						case 2:
