--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
 			threshold: 30
 		});
 		$("#folio .panel-container").swipe({
+			tap:function(event, target) {
+				if ($(target) == $(".work-badges .more")){
+					$(target).parent().parent().find(".comments").addClass("open-in-mobile");
+					$("body").addClass("stop-scroll");
+			},
 			swipe:function(event, direction, distance, duration, fingerCount) {
 				if (direction == "left") {
 					if (currentPanel+2 <= maxPanel) $(document).scrollTop($("a[name*='folio-"+(currentPanel+2)+"']").offset().top);
@@ -179,7 +184,7 @@
 					$(document).scrollTop(0);
 				}
 			},
-			threshold: 30
+			threshold: 30,
 		})
 
 		var currentPanel = 0;
