--- a/index.html
+++ b/index.html
@@ -156,56 +156,11 @@
 			window.scrollTo(0,0);
 		});
 
-		/* GESTURES */
-
-		$("#cover").swipe({
-			swipe:function(event, direction, distance, duration, fingerCount) {
-				if (direction == "up") $(document).scrollTop($("a[name*='folio-1']").offset().top);
-			},
-			threshold: 30
-		});
-		$(".work-badges .more").swipe({
-			tap:function(event, target) {
-				$(target).parent().parent().find(".comments").addClass("open-in-mobile");
-			}
-		});
-		$("#folio .panel-container").swipe({
-			swipe:function(event, direction, distance, duration, fingerCount) {
-				if (direction == "left") {
-					if (currentPanel+2 <= maxPanel) $(document).scrollTop($("a[name*='folio-"+(currentPanel+2)+"']").offset().top);
-				}
-				else if (direction == "right") {
-					if (currentPanel > 0) $(document).scrollTop($("a[name*='folio-"+(currentPanel)+"']").offset().top);
-					else if (currentPanel == 0) {
-						$(document).scrollTop(0);
-					}
-				}
-				else if (direction == "down") {
-					$(document).scrollTop(0);
-				}
-			},
-			threshold: 30,
-		})
-
 		var currentPanel = 0;
 		var maxPanel = $("#folio .panel-container").length;
-		$("#next").click(function() {
-			if (currentPanel+2 <= maxPanel) $(document).scrollTop($("a[name*='folio-"+(currentPanel+2)+"']").offset().top);
-		});
-		$("#prev").click(function() {
-			if (currentPanel > 0) $(document).scrollTop($("a[name*='folio-"+(currentPanel)+"']").offset().top);
-			else if (currentPanel == 0) {
-				$(document).scrollTop(0);
-			}
-		});
-
-		$('#logo').click(function() {
-			// $('#cover').animate({top: '-100%'},300);
-			$(document).scrollTop($("html").outerHeight());
-		});
-
 		var pages = new Array('cover', 'folio-1', 'folio-2', 'folio-3', 'folio-4');
 		var pageIndex = 0; // Last Scroll Position
+
 		$(document).scroll(function() {
 			var scrollingPage = (Math.round($(document).scrollTop() / $("html").outerHeight())); // Current Scroll Position
 			if (pageIndex != scrollingPage) {
@@ -247,32 +202,7 @@
 					}
 
 				}
-				/*if (scrollingPage > pageIndex && pageIndex == 0 && scrollingPage == 1) {
-					$('#cover').animate({top: '-100%'},300);
-					pageIndex = 1;
-				}
-				else if (scrollingPage < pageIndex && pageIndex == 1 && scrollingPage == 0) {
-					console.log("here");
-					$('#cover').animate({top: '0'});
-					pageIndex = 0;
-				}*/
 			}
-			// console.log(($("a[name*='folio-4']").offset().top / $("html").outerHeight() )+1);
-			// console.log($(document).scrollTop());
-			// console.log($("a[name*='folio-1']").offset().top);
-			// console.log($("a[name*='folio-2']").offset().top);
-			// console.log($("a[name*='folio-3']").offset().top);
-			// console.log($("a[name*='folio-4']").offset().top);
-		});
-
-		$(".comments").click(function() {
-			// if ($(window).width() <= 768) $(this).fadeOut();
-			$(this).removeClass("open-in-mobile");
-			$("body").removeClass("stop-scroll");
-		});
-		$(".work-badges .more").click(function() {
-			$(this).parent().parent().find(".comments").addClass("open-in-mobile");
-			$("body").addClass("stop-scroll");
 		});
 
 		function moveFolioNext() {
@@ -304,9 +234,9 @@
 			}
 		});
 
-		/* SMOOTH SCROLL */
 
 		$(function() {
+		/* SMOOTH SCROLL */
 		  $('a[href*=#]:not([href=#])').click(function() {
 		    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
 		      var target = $(this.hash);
@@ -319,6 +249,60 @@
 		      }
 		    }
 		  });
+
+			/* GESTURES */
+
+			$("#cover").swipe({
+				swipe:function(event, direction, distance, duration, fingerCount) {
+					if (direction == "up") $(document).scrollTop($("a[name*='folio-1']").offset().top);
+				},
+				threshold: 30
+			});
+			$("#folio .panel-container").swipe({
+				swipe:function(event, direction, distance, duration, fingerCount) {
+					if (direction == "left") {
+						if (currentPanel+2 <= maxPanel) $(document).scrollTop($("a[name*='folio-"+(currentPanel+2)+"']").offset().top);
+					}
+					else if (direction == "right") {
+						if (currentPanel > 0) $(document).scrollTop($("a[name*='folio-"+(currentPanel)+"']").offset().top);
+						else if (currentPanel == 0) {
+							$(document).scrollTop(0);
+						}
+					}
+					else if (direction == "down") {
+						$(document).scrollTop(0);
+					}
+				},
+				threshold: 30,
+			});
+
+			/* CLICKS */
+
+			$("#next").click(function() {
+				if (currentPanel+2 <= maxPanel) $(document).scrollTop($("a[name*='folio-"+(currentPanel+2)+"']").offset().top);
+			});
+			$("#prev").click(function() {
+				if (currentPanel > 0) $(document).scrollTop($("a[name*='folio-"+(currentPanel)+"']").offset().top);
+				else if (currentPanel == 0) {
+					$(document).scrollTop(0);
+				}
+			});
+
+			$('#logo').click(function() {
+				// $('#cover').animate({top: '-100%'},300);
+				$(document).scrollTop($("html").outerHeight());
+			});
+
+			$(".comments").click(function() {
+				// if ($(window).width() <= 768) $(this).fadeOut();
+				$(this).removeClass("open-in-mobile");
+				$("body").removeClass("stop-scroll");
+			});
+			$(".work-badges .more").click(function() {
+				$(this).parent().parent().find(".comments").addClass("open-in-mobile");
+				$("body").addClass("stop-scroll");
+			});
+
 		});
 	</script>
 </html>
